--- a/VERAlinktree/index.html
+++ b/VERAlinktree/index.html
@@ -14,6 +14,7 @@
         <h1>VERA</h1>
         <p class="title">ONE STOP GREEN CENTER</p>
             <div class="social-icons">
+                <a href="https://veraindia.co.in/" target="_blank"><img src="web.svg" alt="Web"></a>
                 <a href="https://www.instagram.com/vera.india_/" target="_blank"><img src="instagram.svg" alt="Instagram"></a>
                 <a href="https://www.youtube.com/@VeraIndia" target="_blank"><img src="youtube.svg"
                  alt="YouTube"></a>
@@ -23,6 +24,7 @@
             </div>
 
         <div class="links">
+            <a href="https://veraindia.co.in/" target="_blank">Website</a>
             <a href="https://www.instagram.com/vera.india_/" target="_blank">Instagram</a>
             <a href="https://www.youtube.com/@VeraIndia" target="_blank">Youtube</a>
             <a href="https://www.facebook.com/profile.php?id=61560892588847" target="_blank">Facebook</a>
